--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <div class="container">
-        <header  class="navigation">
+    
+    <header  class="navigation">
+        <div class="container navigation-container">
             <nav class="navigation-wrap">
                 <a class="web" href="./index.html">Web<span class="studio">Studio</span></a>
                 <ul class="navigation-list">
@@ -36,8 +37,9 @@
                     <a class="contacts-links" href="">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </header>
-    </div>
+        </div>
+    </header>
+    
     <main>
         <section class="hero">
             <div class="container hero-container">
@@ -90,23 +92,31 @@
             <ul class="team-list">
                 <li class="team-cards">
                     <img src="./images/igor-demyanenko.jpg" width="270" alt="Игорь Демьяненко">
-                    <h3 class="team-cards-title">Игорь Демьяненко</h3>
-                    <p class="team-cards-text">Product Designer</p>
+                    <div class="team-card">
+                        <h3 class="team-cards-title">Игорь Демьяненко</h3>
+                        <p class="team-cards-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-cards">
                     <img src="./images/olga-repina.jpg" width="270" alt="Ольга Репина">
-                    <h3 class="team-cards-title">Ольга Репина</h3>
-                    <p class="team-cards-text">Frontend Developer</p>
+                    <div class="team-card">
+                        <h3 class="team-cards-title">Ольга Репина</h3>
+                        <p class="team-cards-text">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-cards">
                     <img src="./images/nikolai-tarasov.jpg" width="270" alt="Николай Тарасов">
-                    <h3 class="team-cards-title">Николай Тарасов</h3>
-                    <p class="team-cards-text">Marketing</p>
+                    <div class="team-card">
+                        <h3 class="team-cards-title">Николай Тарасов</h3>
+                        <p class="team-cards-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-cards">
                     <img src="./images/mikhail-ermakov.jpg" width="270" alt="Михаил Ермаков">
-                    <h3 class="team-cards-title">Михаил Ермаков</h3>
-                    <p class="team-cards-text">UI Designer</p>
+                    <div class="team-card">
+                        <h3 class="team-cards-title">Михаил Ермаков</h3>
+                        <p class="team-cards-text">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
