--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudio</title>
 </head>
 <body>
-    <div class="container">
-        <header  class="navigation">
+    
+    <header  class="navigation">
+        <div class="container navigation-container">
             <nav class="navigation-wrap">
                 <a class="web" href="./index.html">Web<span class="studio">Studio</span></a>
                 <ul class="navigation-list">
@@ -35,8 +37,9 @@
                     <a class="contacts-links" href="">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </header>
-    </div>
+        </div>
+    </header>
+    
     <main>
         <section class="portfolio">
             <div class="container">
@@ -60,84 +63,66 @@
                 <ul class="project-list">
                     <li class="project-items">
                         <img src="./images/technoquack.jpg" alt="Технокряк">
-                        <h3 class="project-title">
-                            Технокряк
-                        </h3>
-                        <p class="project-text">
-                            Веб-сайт
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Технокряк</h3>
+                            <p class="project-text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/new-orlean.jpg" alt="Постер New Orlean vs Golden Star">
-                        <h3 class="project-title">
-                            Постер New Orlean vs Golden Star
-                        </h3>
-                        <p class="project-text">
-                            Дизайн
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Постер New Orlean vs Golden Star</h3>
+                            <p class="project-text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood">
-                        <h3 class="project-title">
-                            Ресторан Seafood
-                        </h3>
-                        <p class="project-text">
-                            Приложение
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Ресторан Seafood</h3>
+                            <p class="project-text">Приложение</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/prime-project.jpg" alt="Проект Prime">
-                        <h3 class="project-title">
-                            Проект Prime
-                        </h3>
-                        <p class="project-text">
-                            Маркетинг
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Проект Prime</h3>
+                            <p class="project-text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/project-boxes.jpg" alt="Проект Boxes">
-                        <h3 class="project-title">
-                            Проект Boxes
-                        </h3>
-                        <p class="project-text">
-                            Приложение
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Проект Boxes</h3>
+                            <p class="project-text">Приложение</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders">
-                        <h3 class="project-title">
-                            Inspiration has no Borders
-                        </h3>
-                        <p class="project-text">
-                            Веб-сайт
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Inspiration has no Borders</h3>
+                            <p class="project-text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/limited-edition.jpg" alt="Издание Limited Edition">
-                        <h3 class="project-title">
-                            Издание Limited Edition
-                        </h3>
-                        <p class="project-text">
-                            Дизайн
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Издание Limited Edition</h3>
+                            <p class="project-text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/lab-project.jpg" alt="Проект LAB">
-                        <h3 class="project-title">
-                            Проект LAB
-                        </h3>
-                        <p class="project-text">
-                            Маркетинг
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Проект LAB</h3>
+                            <p class="project-text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="project-items">
                         <img src="./images/growing-business.jpg" alt="Growing Business">
-                        <h3 class="project-title">
-                            Growing Business
-                        </h3>
-                        <p class="project-text">
-                            Приложение
-                        </p>
+                        <div class="project-item">
+                            <h3 class="project-title">Growing Business</h3>
+                            <p class="project-text">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </div>
